2001-10-30  Jakub Jelinek  <jakub@redhat.com>

	* gcc.dg/20011029-2.c: New test.

Mon Oct 29 21:19:53 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* objc/execute/class_self-1.m: New test.
	* objc/execute/class_self-2.m: New test.

2001-10-25  Zack Weinberg  <zack@codesourcery.com>

	* gcc.misc-tests/msgs.exp: Delete.
	* gcc.misc-tests/m-un-1.c: Move to gcc.dg.
	* gcc.misc-tests/m-un-2.c: Move to gcc.dg.  Update expected
	error set to match recent changes.

2001-10-24  Zack Weinberg  <zack@codesourcery.com>

	* gcc.dg/20011021-1.c: New test.

2001-10-24  Jakub Jelinek  <jakub@redhat.com>

	* gcc.c-torture/compile/20011023-1.c: New test.

2001-10-23  Geoffrey Keating  <geoffk@redhat.com>

	* lib/g77.exp: Rewrite based on lib/g++.exp.

2001-10-19  Jakub Jelinek  <jakub@redhat.com>

	* gcc.c-torture/execute/20011019-1.c: New test.

	* gcc.dg/20011018-1.c: New test.

2001-10-19  NIIBE Yutaka  <gniibe@m17n.org>

	* gcc.c-torture/execute/ieee/ieee.exp: Change sh-*-* to sh*-*-*.

2001-10-18  Alexandre Oliva  <aoliva@redhat.com>

	* gcc.dg/attr-noinline.c, gcc.dg/attr-used.c: New tests.
	* gcc.dg/attr-invalid.c: Likewise.

2001-10-18  Jakub Jelinek  <jakub@redhat.com>

	* testsuite/gcc.dg/20011015-1.c: New test.

2001-10-14  Richard Sandiford  <rsandifo@redhat.com>

	* g++.dg/template/unify2.C: New test.

2001-10-14  Richard Sandiford  <rsandifo@redhat.com>

	* g++.dg/other/exception-specification.C: New test

2001-10-13  Tom Rix  <trix@redhat.com>

	* gcc.c-torture/execute/990826-0.x: AIX XFAIL -msoft-float.
	* gcc.c-torture/execute/980709-1.x: AIX XFAIL -msoft-float.

2001-10-12  Jakub Jelinek  <jakub@redhat.com>

	* testsuite/gcc.dg/20011009-1.c: New test.

2001-10-12  Nathan Sidwell  <nathan@codesourcery.com>

	PR g++/4476
	* g++.dg/other/friend1.C: New test.

2001-10-11  Richard Henderson  <rth@redhat.com>

	* g++.old-deja/g++.other/crash18.C: Add -S to options.

2001-10-10  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* gcc.c-torture/compile/20011010-1.c: New.
